--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -1,11 +1,10 @@
-/*
-COLORS:
+:root {
+  /* Vars */
+  --light-green: rgba(126, 213, 111, 0.8);
+  --medium-green: rgba(85, 198, 122, 0.8);
+  --dark-green: rgba(40, 180, 133, 0.8);
 
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
-
-*/
+}
 
 * {
   /* Dimensions */
@@ -29,5 +28,17 @@ body {
 
 .header {
   height: 95vh;
-  background-image: linear-gradient(to right bottom, );
+  background-image: linear-gradient(
+                      to right bottom,
+                      var(--light-green),
+                      var(--medium-green),
+                      var(--dark-green)
+                    ), url(../img/hero.jpg);
+  background-size: cover;
+  background-position: top;
+  position: relative;
+}
+
+.btn-white {
+  background-color: #fff;
 }
