--- a/omnifood/main.css
+++ b/omnifood/main.css
@@ -2,20 +2,21 @@ body {
   height: 800px;
   margin: 0;
 
-  background-size: cover;
-  background-position: center;
-  background-image: linear-gradient(
-    to top right,
-    rgba(0,0,0,.6),
-    rgba(0,0,0,.8)),
-    url(http://jorgecamposcodes.com/omnifood/css/img/hero-min.jpg);
-
 }
 
 header {
   height: 980px;
   color: white;
   text-transform: uppercase;
+  background-size: cover;
+  background-position: center;
+  background-image: linear-gradient(
+    rgba(0,0,0,.7),
+    rgba(0,0,0,.7)),
+    url(http://jorgecamposcodes.com/omnifood/css/img/hero-min.jpg);
+  height: 100vh;
+
+  background-attachment: fixed;
 
 }
 
@@ -36,7 +37,9 @@ nav {
   display: flex;
   justify-content: space-between;
   list-style-type: none;
-  font: 200 17.5px sans-serif;
+  font-family: 'lato', 'Arial', sans-serif;
+  font-size: 17.5px;
+  font-weight: 200;
   padding-top: 1.5em;
   margin-left: 100px;
 
@@ -48,7 +51,9 @@ nav {
 }
 
 .header-txt-container {
-  font: 200 40px sans-serif;
+  font-family: 'lato', 'Arial', sans-serif;
+  font-size: 40px;
+  font-weight: 300;
   letter-spacing: .07em;
   margin-top: 4em;
   margin-left: 3.8em;
@@ -62,8 +67,8 @@ nav {
 
 .btn {
   font-size: 17.5px;
-  font-weight: normal;
-  font-family: sans-serif;
+  font-weight: 100;
+  font-family: 'lato', 'Arial', sans-serif;
   text-decoration: none;
   color: #E47D31;
   padding: .8em 2em;
