Styles: Add base styling

--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -6,11 +6,18 @@
 
 }
 
-* {
+*,
+*::after,
+*::before {
   /* Dimensions */
-  box-sizing: border-box;
+  box-sizing: inherit;
   margin: 0;
   padding: 0;
+
+}
+
+html {
+  font-size: 65.5%;
 
 }
 
@@ -24,6 +31,9 @@ body {
   /* Color */
   color: #777;
 
+  /* Dimensions */
+  box-sizing: border-box;
+
 }
 
 .header {
@@ -32,12 +42,54 @@ body {
                       to right bottom,
                       var(--light-green),
                       var(--medium-green),
-                      var(--dark-green)
                     ), url(../img/hero.jpg);
   background-size: cover;
   background-position: top;
   position: relative;
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+
 }
+
+.logo-box {
+  position: absolute;
+  top: 4rem;
+  left: 4rem;
+
+}
+
+.logo {
+  height: 3.5rem;
+}
+
+.text-box {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+
+
+}
+
+.heading-primary {
+  display: block;
+  font-size: 6rem;
+  font-weight: 400;
+  letter-spacing: 3.5rem;
+
+  animation-name: moveInLeft;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
+
+
+}
+
+
+.heading-primary--sub {
+  
+}
+
+
 
 .btn-white {
   background-color: #fff;
